update with sessions on training etc
